src/page/snapshots/xjtu_mealflow__page__transactions__test__render-2.snap
---
source: src/page/transactions.rs
expression: terminal.backend()
---
"   金额        时间                               商家                          " Hidden by multi-width symbols: [(4, " "), (6, " "), (16, " "), (18, " "), (51, " "), (53, " ")]
"                                                                              ║ "
"      -4.34    2024-07-30 18:54                   库迪咖啡                    ║ " Hidden by multi-width symbols: [(51, " "), (53, " "), (55, " "), (57, " ")]
"                                                                              ║ "
"                                                                              ║ "
"      -9.11    2024-07-29 18:25                   梧桐美润水饺                ║ " Hidden by multi-width symbols: [(51, " "), (53, "4"), (55, " "), (57, "5"), (59, " "), (61, "2")]
"                                                                              ║ "
"                                                                              ║ "
"      -4.06    2024-07-28 16:57                   砂锅                        ║ " Hidden by multi-width symbols: [(51, " "), (53, " ")]
"                                                                              ║ "
"                                                                              ║ "
"      -4.87    2024-07-27 17:42                   冒菜                        ║ " Hidden by multi-width symbols: [(51, " "), (53, " ")]
"                                                                              ║ "
"                                                                              ║ "
"      -0.32    2024-07-24 21:20                   七彩阁浴室                  ║ " Hidden by multi-width symbols: [(51, " "), (53, "4"), (55, " "), (57, "5"), (59, " ")]
"                                                                              ║ "
"                                                                              ║ "
"     -10.56    2024-07-24 12:18                   库迪咖啡                    ║ " Hidden by multi-width symbols: [(51, " "), (53, " "), (55, " "), (57, " ")]
"                                                                              █ "
"                                                                              █ "
" █    -7.89    2024-07-23 12:55                   梧桐美润水饺                █ " Hidden by multi-width symbols: [(51, " "), (53, " "), (55, " "), (57, " "), (59, " "), (61, " ")]
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Move focus: hjkl | Fetch: f | Load from local cache: l                       │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
