src/page/snapshots/xjtu_mealflow__page__transactions__test__render.snap
---
source: src/page/transactions.rs
expression: terminal.backend()
---
"   金额        时间                               商家                          " Hidden by multi-width symbols: [(4, " "), (6, " "), (16, " "), (18, " "), (51, " "), (53, " ")]
"                                                                              █ "
"     -18.72    2025-03-29 17:08                   寿司                        █ " Hidden by multi-width symbols: [(51, " "), (53, " ")]
"                                                                              █ "
"                                                                              ║ "
"      -1.37    2025-03-24 17:16                   西14西15东12浴室            ║ " Hidden by multi-width symbols: [(51, " "), (55, " "), (59, " "), (63, " "), (65, " ")]
"                                                                              ║ "
"                                                                              ║ "
"      -9.76    2025-03-23 12:43                   库迪咖啡                    ║ " Hidden by multi-width symbols: [(51, " "), (53, " "), (55, " "), (57, " ")]
"                                                                              ║ "
"                                                                              ║ "
"      -4.11    2025-03-22 07:28                   时光水吧                    ║ " Hidden by multi-width symbols: [(51, " "), (53, " "), (55, " "), (57, " ")]
"                                                                              ║ "
"                                                                              ║ "
"         -1    2025-03-21 17:59                   西14西15东12浴室            ║ " Hidden by multi-width symbols: [(51, " "), (55, " "), (59, " "), (63, " "), (65, " ")]
"                                                                              ║ "
"                                                                              ║ "
"     -15.14    2025-03-21 11:18                   寿司                        ║ " Hidden by multi-width symbols: [(51, " "), (53, " ")]
"                                                                              ║ "
"                                                                              ║ "
"     -15.91    2025-03-19 11:35                   寿司                        ║ " Hidden by multi-width symbols: [(51, " "), (53, " ")]
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Fetch: f | Show help: ? | Load from local cache: l                           │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
